# health-analytics-platform

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  run_pipeline.sh
analyses/physiological_nonstationarity/: README.md  analysis.py
analyses/regime_dashboard/: README.md
analyses/regime_dashboard/power_bi_equivalent/: connection_setup.md  dax_measures.md  design_notes.md
analyses/training_load_predictors/: README.md  analysis.py
dbt/: README.md  dbt_project.yml
dbt/models/marts/: daily_health_summary.sql  mart_regime_labels.sql  mart_run_samples.sql  mart_training_load_features.sql
dbt/models/staging/: sources.yml  stg_apple_health_body_composition.sql  stg_apple_health_heart_rate.sql  stg_oura_readiness.sql  stg_oura_sleep.sql  stg_strava_activities.sql  stg_strava_streams.sql  stg_strava_streams_with_hr.sql
docs/: research_paper.md
infra/metabase/: README.md  docker-compose.yml
ingestion/apple_health/: ingest_body_composition.py  ingest_heart_rate.py
ingestion/common/: snowflake_auth.py
ingestion/healthfit/: __init__.py
ingestion/oura/: ingest_readiness.py  ingest_sleep.py
ingestion/strava/: ingest_activities.py  ingest_streams.py
