[project]
name = "health-analytics-platform"
version = "0.1.0"
description = "Personal health analytics platform: ingestion, transformation, and analysis of Oura, Apple Health, and HealthFit data using Python, dbt, and Snowflake."
authors = [
    { name = "Hemanth Allamaneni", email = "109781897+hemanthallamaneni@users.noreply.github.com" }
]
requires-python = ">=3.12.13"
dependencies = [
    "cryptography>=42.0.0",
    "dbt-core>=1.8.0",
    "dbt-snowflake>=1.8.0",
    "matplotlib>=3.10.8",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "ruptures>=1.1.10",
    "scipy>=1.17.1",
    "snowflake-connector-python>=3.0.0",
    "statsmodels>=0.14.6",
]
